--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Accurate and fast land survey solutions in Malappuram, Kerala. Topographic, setout, and contour surveys with same-day sketch delivery." />
-    <meta name="keywords" content="land survey, Malappuram, Kerala, topographic survey, contour survey, setout survey, DGPS, total station" />
-    <meta property="og:title" content="Land Survey Solutions - Malappuram, Kerala" />
-    <meta property="og:description" content="Accurate and fast land survey solutions in Malappuram, Kerala. Topographic, setout, and contour surveys with same-day sketch delivery." />
+    <meta
+      name="description"
+      content="Accurate and fast land survey solutions in Malappuram, Kerala. Topographic, setout, and contour surveys with same-day sketch delivery."
+    />
+    <meta
+      name="keywords"
+      content="land survey, Malappuram, Kerala, topographic survey, contour survey, setout survey, DGPS, total station"
+    />
+    <meta
+      property="og:title"
+      content="Land Survey Solutions - Malappuram, Kerala"
+    />
+    <meta
+      property="og:description"
+      content="Accurate and fast land survey solutions in Malappuram, Kerala. Topographic, setout, and contour surveys with same-day sketch delivery."
+    />
     <meta property="og:image" content="/path/to/optimized-image.webp" />
     <meta property="og:url" content="https://example.com" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -16,7 +28,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
       rel="stylesheet"
     />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="/styles/styles.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -109,7 +121,7 @@
     <section
       id="home"
       class="hero-section relative h-screen pt-16 bg-cover bg-right"
-      style="background-image: url('total_station.jpg')"
+      style="background-image: url('/images/total_station.jpg')"
     >
       <div class="absolute inset-0 bg-black bg-opacity-60"></div>
       <div
@@ -325,7 +337,7 @@
             <div class="flex items-center mb-4">
               <div class="w-12 h-12 rounded-full overflow-hidden mr-4">
                 <img
-                  src="thouseef.png"
+                  src="/images/thouseef.png"
                   alt="Mohd Thouseef"
                   class="w-full h-full object-cover"
                 />
@@ -356,7 +368,7 @@
             <div class="flex items-center mb-4">
               <div class="w-12 h-12 rounded-full overflow-hidden mr-4">
                 <img
-                  src="vpm.png"
+                  src="/images/vpm.png"
                   alt="Valappil Muralidharan"
                   class="w-full h-full object-cover"
                 />
@@ -383,7 +395,7 @@
             <div class="flex items-center mb-4">
               <div class="w-12 h-12 rounded-full overflow-hidden mr-4">
                 <img
-                  src="prasanth.png"
+                  src="/images/prasanth.png"
                   alt="Prasanth U P"
                   class="w-full h-full object-cover"
                 />
@@ -488,6 +500,6 @@
         </div>
       </div>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="/scripts/scripts.js"></script>
   </body>
 </html>
