--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
       rel="stylesheet"
     />
-    <link href="/styles/styles.css" rel="stylesheet" />
+    <link href="./styles/styles.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -121,7 +121,7 @@
     <section
       id="home"
       class="hero-section relative h-screen pt-16 bg-cover bg-right"
-      style="background-image: url('/images/total_station.jpg')"
+      style="background-image: url('./images/total_station.jpg')"
     >
       <div class="absolute inset-0 bg-black bg-opacity-60"></div>
       <div
@@ -337,7 +337,7 @@
             <div class="flex items-center mb-4">
               <div class="w-12 h-12 rounded-full overflow-hidden mr-4">
                 <img
-                  src="/images/thouseef.png"
+                  src="./images/thouseef.png"
                   alt="Mohd Thouseef"
                   class="w-full h-full object-cover"
                 />
@@ -368,7 +368,7 @@
             <div class="flex items-center mb-4">
               <div class="w-12 h-12 rounded-full overflow-hidden mr-4">
                 <img
-                  src="/images/vpm.png"
+                  src="./images/vpm.png"
                   alt="Valappil Muralidharan"
                   class="w-full h-full object-cover"
                 />
@@ -395,7 +395,7 @@
             <div class="flex items-center mb-4">
               <div class="w-12 h-12 rounded-full overflow-hidden mr-4">
                 <img
-                  src="/images/prasanth.png"
+                  src="./images/prasanth.png"
                   alt="Prasanth U P"
                   class="w-full h-full object-cover"
                 />
@@ -500,6 +500,6 @@
         </div>
       </div>
     </footer>
-    <script src="/scripts/scripts.js"></script>
+    <script src="./scripts/scripts.js"></script>
   </body>
 </html>
