--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="keywords"
-      content="land survey, Malappuram, Kerala, topographic survey, contour survey, setout survey, DGPS, total station"
+      content="land survey, Malappuram, Kerala, Galaxy Digital Land Survey, topographic survey, contour survey, setout survey, DGPS, total station"
     />
     <meta
       property="og:title"
@@ -20,7 +20,7 @@
       content="Accurate and fast land survey solutions in Malappuram, Kerala. Topographic, setout, and contour surveys with same-day sketch delivery."
     />
     <meta property="og:image" content="/path/to/optimized-image.webp" />
-    <meta property="og:url" content="https://example.com" />
+    <meta property="og:url" content="https://nigh7wind.github.io/GalaxyDigitalLandSurvey/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Land Survey Solutions - Malappuram, Kerala</title>
